--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "firebase": "^12.4.0",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
+    "lightningcss": "^1.30.2",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
