--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
     "lightningcss": "^1.30.2",
