--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
     "lightningcss": "^1.30.2",
+    "lucide-react": "^0.548.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
