--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
+    "framer-motion": "^12.23.24",
     "lightningcss": "^1.30.2",
     "next": "15.5.4",
     "react": "19.1.0",
